--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,24 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recylerview_photos"
-        android:layout_width="356dp"
-        android:layout_height="397dp"
+        android:layout_width="353dp"
+        android:layout_height="380dp"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="68dp"
         android:background="@color/colorAccent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/redownloadFailedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="81dp"
+        android:text="Re-Download Failed Resource"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
